[package]
name = "dos"
description = "Rust-friendly bindings for Windows APIs"
repository = "https://github.com/dlon/dos-rs"
documentation = "https://docs.rs/dos"
license = "MIT"
version = "0.0.2"
edition = "2024"
readme = "README.md"

[features]
default = ["full"]
full = ["process", "string", "security", "sys", "net"]
process = [
    "dep:bitflags",
    "windows-sys/Win32_System_Diagnostics",
    "windows-sys/Win32_System_Diagnostics_ToolHelp",
]
string = ["windows-sys/Win32_Globalization"]
security = [
    "dep:bitflags",
    "windows-sys/Win32_Security",
    "windows-sys/Win32_Security_Authorization",
    "windows-sys/Win32_System_Memory",
]
net = [
    "windows-sys/Win32_NetworkManagement",
    "windows-sys/Win32_NetworkManagement_IpHelper",
    "windows-sys/Win32_NetworkManagement_Ndis",
    "windows-sys/Win32_Networking_WinSock",
]
sys = ["windows-sys/Win32_System_SystemInformation"]

[dependencies]
bitflags = { version = "2.6", optional = true }
windows-sys = { version = "0.61.0", features = [] }

[dev-dependencies]
windows-sys = { version = "0.61.0", features = [
    "Win32_Storage",
    "Win32_Storage_FileSystem",
] }

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []
rustdoc-args = ["--cfg", "docsrs"]
